--- a/styles/style.css
+++ b/styles/style.css
@@ -5,9 +5,21 @@
   }
 
   body {
+    height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
+    background: url('../assets/img/desert.png');
+    background-position: center;
+    background-size: cover;
+    font-family: "Sancreek-Regular", Arial, Helvetica, sans-serif;
+  }
+
+  h1{
+    margin-bottom: 20px;
+    font-size: 68px;
+    text-shadow: 4px 4px #100f0f35;
   }
 
   canvas {
