--- a/styles/style.css
+++ b/styles/style.css
@@ -1,27 +1,43 @@
 * {
-    box-sizing: border-box;
-    margin: 0;
-    scroll-behavior: smooth;
-  }
+  box-sizing: border-box;
+  margin: 0;
+  scroll-behavior: smooth;
+}
 
-  body {
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    background: url('../assets/img/desert.png');
-    background-position: center;
-    background-size: cover;
-    font-family: "Sancreek-Regular", Arial, Helvetica, sans-serif;
-  }
+body {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background: url("../assets/img/desert.png");
+  background-position: center;
+  background-size: cover;
+  font-family: "Sancreek-Regular", Arial, Helvetica, sans-serif;
+}
 
-  h1{
-    margin-bottom: 20px;
-    font-size: 68px;
-    text-shadow: 4px 4px #100f0f35;
-  }
+h1 {
+  margin-bottom: 20px;
+  font-size: 68px;
+  text-shadow: 4px 4px #100f0f35;
+}
 
+canvas {
+  background-color: black;
+  display: block;
+}
+
+/* Smartphones */
+@media (max-width: 720px) {
   canvas {
-    background-color: black;
+    width: 100%;
   }
+}
+@media (max-height: 480px) {
+  canvas {
+    height: 100vh;
+  }
+  h1 {
+    display: none;
+  }
+}
