--- a/styles/style.css
+++ b/styles/style.css
@@ -25,9 +25,37 @@ h1 {
 
 canvas {
   background-color: black;
-  display: block;
+  /* display: block; */
+  display: none;
 }
 
+.startScreen {
+  width: "720px";
+  height: "480px";
+}
+
+.startScreen {
+  display: flex;
+  height: 480px;
+  width: 720px;
+  background-image: url("../assets/img/9_intro_outro_screens/start/startscreen_1.png");
+  background-size: 100% 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  justify-content: center;
+  align-items: flex-start;
+}
+
+.startBtn {
+  display: flex;
+  height: 30px;
+  width: 150px;
+}
+
+.startScreen__img {
+  width: 100%;
+  height: 100%;
+}
 /* Smartphones */
 @media (max-width: 720px) {
   canvas {
