--- a/styles/style.css
+++ b/styles/style.css
@@ -41,7 +41,7 @@ canvas {
   background-repeat: no-repeat;
 }
 
-.startBtn {
+.btn {
   height: 30px;
   width: 150px;
   border-radius: 21px;
@@ -50,7 +50,11 @@ canvas {
   background-color: #FBA900;
 }
 
-.startBtn:hover {
+.btnEndscreen {
+  margin-top: 30px;
+}
+
+.btn:hover {
   cursor: pointer;
   background-color: #F4DC00;
 }
@@ -59,6 +63,20 @@ canvas {
   display: flex;
   gap: 30px;
   margin-bottom: 20px;
+}
+
+.endscreen {
+  display: none;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+  height: 480px;
+  width: 720px;
+  background-color: black;
+  background-image: url("../assets/img/You won, you lost/Game Over.png");
+  background-size: 50% 50%;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
 /* Smartphones */
