--- a/styles/style.css
+++ b/styles/style.css
@@ -65,7 +65,7 @@ canvas {
   margin-bottom: 20px;
 }
 
-.endscreen {
+.endScreen {
   display: none;
   flex-direction: column;
   align-items: center;
@@ -75,6 +75,20 @@ canvas {
   background-color: black;
   background-image: url("../assets/img/You won, you lost/Game Over.png");
   background-size: 50% 50%;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.wonScreen {
+  display: none;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+  height: 480px;
+  width: 720px;
+  background-color: black;
+  background-image: url("../assets/img/You won, you lost/You Win A.png");
+  background-size: 70% 70%;
   background-position: center;
   background-repeat: no-repeat;
 }
