--- a/styles/style.css
+++ b/styles/style.css
@@ -47,7 +47,7 @@ canvas {
   border-radius: 21px;
   margin-top: 40px;
   border: none;
-  background-color: #FBA900;
+  background-color: #fba900;
 }
 
 .btnEndscreen {
@@ -56,7 +56,7 @@ canvas {
 
 .btn:hover {
   cursor: pointer;
-  background-color: #F4DC00;
+  background-color: #f4dc00;
 }
 
 .key-description {
@@ -73,24 +73,18 @@ canvas {
   height: 480px;
   width: 720px;
   background-color: black;
-  background-image: url("../assets/img/You won, you lost/Game Over.png");
-  background-size: 50% 50%;
   background-position: center;
   background-repeat: no-repeat;
 }
 
-.wonScreen {
-  display: none;
-  flex-direction: column;
-  align-items: center;
-  gap: 10px;
-  height: 480px;
-  width: 720px;
-  background-color: black;
-  background-image: url("../assets/img/You won, you lost/You Win A.png");
+.gameOverImg {
+  background-size: 50% 50%;
+  background-image: url("../assets/img/You won, you lost/Game Over.png");
+}
+
+.youWinImg {
   background-size: 70% 70%;
-  background-position: center;
-  background-repeat: no-repeat;
+  background-image: url("../assets/img/You won, you lost/You Win A.png");
 }
 
 /* Smartphones */
