--- a/styles/style.css
+++ b/styles/style.css
@@ -55,6 +55,19 @@ canvas {
   background-color: #fba900;
 }
 
+.btnCanvas {
+  background-color: #fba900;
+  height: 45px;
+  width: 45px;
+  border-radius: 50px;
+  position: absolute;
+}
+
+.btnCanvasStop {
+  top: 20px;
+  left: 650px;
+}
+
 .btnEndscreen {
   margin-top: 30px;
 }
