--- a/styles/style.css
+++ b/styles/style.css
@@ -25,8 +25,6 @@ h1 {
 .canvasWrapper {
   display: none;
   position: relative;
-  width: 720px;
-  height: 480px;
 }
 
 canvas {
@@ -61,11 +59,20 @@ canvas {
   width: 45px;
   border-radius: 50px;
   position: absolute;
+  background-size: 90% 90%;
+  background-position: center;
+  background-repeat: no-repeat;
+  border: 1px solid white;
+}
+.btnCanvas:hover {
+  cursor: pointer;
+  background-color: #f4dc00;
 }
 
 .btnCanvasStop {
-  top: 20px;
-  left: 650px;
+  top: 5%;
+  left: 90%;
+  background-image: url("../assets/icons/play_pause.png");
 }
 
 .btnEndscreen {
