--- a/styles/style.css
+++ b/styles/style.css
@@ -3,6 +3,9 @@
   margin: 0;
   scroll-behavior: smooth;
 }
+d-none {
+  display: none !important;
+}
 
 body {
   height: 100vh;
@@ -23,10 +26,24 @@ h1 {
   text-shadow: 4px 4px #100f0f35;
 }
 
+.rotateHint{
+  display: none;
+  position: fixed;
+  inset: 0;
+  background: rgba(0, 0, 0, 0.8);
+  color: white;
+  font-size: 1.5rem;
+  align-items: center;
+  justify-content: center;
+  z-index: 9999;
+  text-align: center;
+}
+
 #fullscreen {
   display: flex;
   justify-content: center;
   flex-direction: column;
+  align-items: center;
 }
 
 .canvasWrapper {
