Added "back to home" button for en and win screen

--- a/styles/style.css
+++ b/styles/style.css
@@ -167,6 +167,10 @@ canvas {
   padding: 1px;
 }
 
+.btnHome{
+  margin-top: 10px;
+}
+
 .btn:hover {
   cursor: pointer;
   background-color: #f4dc00;
