--- a/styles/style.css
+++ b/styles/style.css
@@ -26,7 +26,7 @@ h1 {
   text-shadow: 4px 4px #100f0f35;
 }
 
-.rotateHint{
+.rotateHint {
   display: none;
   position: fixed;
   inset: 0;
@@ -39,7 +39,7 @@ h1 {
   text-align: center;
 }
 
-.rotateIcon{
+.rotateIcon {
   height: 80%;
   width: 80px;
 }
@@ -64,13 +64,23 @@ canvas {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 10px;
+  gap: 3px;
   height: 480px;
   width: 720px;
   background-image: url("../assets/img/9_intro_outro_screens/start/startscreen_1.png");
   background-size: 100% 100%;
   background-position: center;
   background-repeat: no-repeat;
+}
+
+.impressum {
+  display: none;
+  flex-direction: column;
+  align-items: center;
+  gap: 3px;
+  height: 480px;
+  width: 720px;
+  background-color: #FAA53E;
 }
 
 .btn {
@@ -81,6 +91,16 @@ canvas {
   background-color: #fba900;
 }
 
+.btnBack{
+  margin-top: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 7px;
+  padding: 1px;
+  background-color: aliceblue;
+}
+
 .btnStart {
   margin-top: 20px;
   display: flex;
@@ -88,6 +108,12 @@ canvas {
   justify-content: center;
   gap: 7px;
   padding: 1px;
+}
+
+.btnImpressum {
+  margin-top: auto;
+  margin-bottom: 15px;
+  width: 100px;
 }
 
 .btnStartMute {
@@ -167,7 +193,7 @@ canvas {
   padding: 1px;
 }
 
-.btnHome{
+.btnHome {
   margin-top: 10px;
 }
 
