--- a/styles/style.css
+++ b/styles/style.css
@@ -128,6 +128,7 @@ canvas {
 }
 
 .btnCanvas {
+  display: none;
   background-color: #fba900;
   height: 45px;
   width: 45px;
@@ -138,6 +139,7 @@ canvas {
   background-repeat: no-repeat;
   border: 1px solid white;
 }
+
 .btnCanvas:hover {
   cursor: pointer;
   background-color: #f4dc00;
@@ -231,32 +233,8 @@ canvas {
   background-image: url("../assets/img/You won, you lost/You Win A.png");
 }
 
-#touchBtnLeft {
-  display: none;
-}
-#touchBtnRight {
-  display: none;
-}
-
-#touchBtnUp {
-  display: none;
-}
-
-#touchBtnThrow {
-  display: none;
-}
-
 @media (pointer: coarse) {
-  #touchBtnLeft {
-    display: block;
-  }
-  #touchBtnRight {
-    display: block;
-  }
-  #touchBtnUp {
-    display: block;
-  }
-  #touchBtnThrow {
+  .btnCanvas {
     display: block;
   }
 }
@@ -271,6 +249,7 @@ canvas {
     width: 100%;
   }
 }
+
 @media (max-height: 480px) {
   #fullscreen {
     height: 100%;
