--- a/styles/style.css
+++ b/styles/style.css
@@ -164,6 +164,7 @@ canvas {
   background-position: center;
   background-repeat: no-repeat;
   border: 1px solid white;
+  opacity: 0.9;
 }
 
 .btnCanvas:hover {
@@ -188,9 +189,15 @@ canvas {
 }
 
 .btnCanvasFullscreen {
+  border-radius: unset;
+  height: 40px;
+  width: 40px;
+  /* background-size: 80% 80%;   */
+  background-color: unset;
+  border: none;
   top: 5%;
   left: 50%;
-  background-image: url("../assets/icons/left.png");
+  background-image: url("../assets/icons/fullscreen.png");
 }
 
 .btnCanvasLeft {
